--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -2,6 +2,7 @@ picklesdir = $(pkgdatadir)/pickles
 dist_pickles_DATA = elf-common.pk elf-64.pk elf-32.pk elf.pk ctf.pk ctf-dump.pk leb128.pk \
                     bpf.pk btf.pk btf-ext.pk btf-dump.pk bmp.pk \
                     color.pk rgb24.pk id3v1.pk ios.pk diff.pk pk-table.pk \
+		    ctf-frame.pk ctf-frame-dump.pk \
 		    eh-frame.pk dwarf-eh-frame-hdr.pk \
                     dwarf.pk dwarf-common.pk dwarf-frame.pk dwarf-pubnames.pk \
                     dwarf-types.pk time.pk argp.pk pktest.pk mbr.pk ustar.pk \
