pkl: trans: include lambda functions in the functions stack
2022-07-13  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_pr_decl): Do not pushing current function
	to the stack of functions here.
	(pkl_trans1_pr_func): Do it here.
	(pkl_trans1_ps_decl): Remove handler.
	(pkl_phase_trans1): Register new handler.
	* testsuite/poke.pkl/lambda-5.pk): Add new test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1470,6 +1470,7 @@ EXTRA_DIST = \
   poke.pkl/lambda-2.pk \
   poke.pkl/lambda-3.pk \
   poke.pkl/lambda-4.pk \
+  poke.pkl/lambda-5.pk \
   poke.pkl/lambda-diag-1.pk \
   poke.pkl/le-arrays-diag-1.pk \
   poke.pkl/le-functions-diag-1.pk \
