add reinterpret-cast float<->integer conversion; configure-time C feature checks
Add a new facility for converting between floating-point and integer types of
the same size, without altering the bit representation.  This is intended for
tagging in dynamically-typed systems.

The feature is implemented using relatively advanced (and efficient) C hacks
which are however supposed to be very portable: check for the required features
at compile time in order to be sure.

* jitter/jitter-reinterpret-cast.h: New header file.

* jitter/jitter.h: Include new header.
(JITTER_REINTERPRET_CAST_UINT_TO_FLOAT, JITTER_REINTERPRET_CAST_INT_TO_FLOAT)
(JITTER_REINTERPRET_CAST_FLOAT_TO_UINT, JITTER_REINTERPRET_CAST_FLOAT_TO_INT):
New macros.

* configure.ac: Add comments.
(ac_cv_have_non_constant_aggregate_initializers)
(ac_cv_have_designated_initializers)
(ac_cv_have_compound_literals, have_compound_literals_as_lvalues): New shell
variables.
(JITTER_HAVE_NON_CONSTANT_AGGREGATE_INITIALIZERS)
(JITTER_HAVE_DESIGNATED_INITIALIZERS)
(JITTER_HAVE_COMPOUND_LITERALS, JITTER_HAVE_COMPOUND_LITERALS_AS_LVALUES): New
feature macros and feature tests.

jitter/jitter-config.h.in: (JITTER_HAVE_NON_CONSTANT_AGGREGATE_INITIALIZERS)
(JITTER_HAVE_DESIGNATED_INITIALIZERS)
(JITTER_HAVE_COMPOUND_LITERALS, JITTER_HAVE_COMPOUND_LITERALS_AS_LVALUES): New
feature macros.

* Makefile.am (lib_libjitterutility__partial_la_SOURCES, jitterinclude_HEADERS):
Add new header.
(check_PROGRAMS): Add new test program tests/unit/float-test.
(tests_unit_float_test_SOURCES, tests_unit_float_test_LDADD)
(tests_unit_float_test_CPPFLAGS): New definitions.

* tests/unit/float-test.c: New file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -332,6 +332,7 @@ lib_libjitterutility__partial_la_SOURCES = \
   jitter/jitter-parse-int.h jitter/jitter-parse-int.c \
   jitter/jitter-print.h jitter/jitter-print.c \
   jitter/jitter-readline.h \
+  jitter/jitter-reinterpret-cast.h \
   jitter/jitter-string.h jitter/jitter-string.c \
   jitter/jitter-time.h jitter/jitter-time.c \
   jitter/jitter-word-set.h jitter/jitter-word-set.c
@@ -359,19 +360,24 @@ jitterinclude_HEADERS += \
   jitter/jitter-parse-int.h \
   jitter/jitter-print.h \
   jitter/jitter-readline.h \
+  jitter/jitter-reinterpret-cast.h \
   jitter/jitter-string.h \
   jitter/jitter-time.h \
   jitter/jitter-word-set.h
 
 # Unit tests for libjitterutility.
 if JITTER_ENABLE_TEST_SUITE
-  check_PROGRAMS += tests/unit/heap-test
+  check_PROGRAMS += tests/unit/heap-test tests/unit/float-test
 tests_unit_heap_test_SOURCES = tests/unit/heap-test.c
 tests_unit_heap_test_LDADD = \
   lib/libjitterutility--partial.la \
   $(LDADD_FOR_GNULIB)
 tests_unit_heap_test_CPPFLAGS = \
   $(AM_CPPFLAGS) $(CPPFLAGS_FOR_INTERNAL_USE)
+
+tests_unit_float_test_SOURCES = tests/unit/float-test.c
+tests_unit_float_test_LDADD = $(tests_unit_heap_test_LDADD)
+tests_unit_float_test_CPPFLAGS = $(tests_unit_heap_test_CPPFLAGS)
 endif # if JITTER_ENABLE_TEST_SUITE
 
 
