pkl-lex.l: accept lower-case b as suffix of integer literals
2022-09-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-lex.l (IS): Add lower-case b to `IS' definition.
	(Integer literal rule): Accept lower-case b as a valid suffix.
	* doc/learn-poke-language-in-y-minutes.pk: Add a line about integer
	suffixes.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.pkl/integers-8.pk: New test.
	* testsuite/poke.pkl/integers-9.pk: Likewise.
	* testsuite/poke.pkl/integers-10.pk: Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1415,6 +1415,9 @@ EXTRA_DIST = \
   poke.pkl/integers-5.pk \
   poke.pkl/integers-6.pk \
   poke.pkl/integers-7.pk \
+  poke.pkl/integers-8.pk \
+  poke.pkl/integers-9.pk \
+  poke.pkl/integers-10.pk \
   poke.pkl/integers-diag-1.pk \
   poke.pkl/integers-diag-2.pk \
   poke.pkl/iobias-1.pk \
