Support for computed fields in struct types.
This patch adds support for computed fields to Poke struct types.  A
"computed field" is a field that has no real storage in the resulting
struct values, but instead both its value and the side effect of
assigning to it are computed every time the field is referred.

Each computed field

    computed FIELD_TYPE FIELD_NAME;

must be accompanied by a pair of setter/getter methods:

   method get_FIELD_NAME = FIELD_TYPE: { ... }
   method set_FIELD_NAME = (FIELD_TYPE val) void: { ... }

The getter is invoked every time the computed field is referred in a
r-value context, whereas the setter is invoked every time the computed
field is referred in a l-value context.

A couple of examples:

type Foo =
  struct
  {
    int<32> imm_hi;
    int<32> imm_lo;

    computed int<64> imm;

    method get_imm = int: { return i ::: j; }
    method set_imm = (int val) void: { i = val & 0xffff <<. 32; j = val & 0xffff; }
  };

type ID3V1_Tag =
  struct
  {
    char[30] title;

    computed string title_str;

    method get_title_str = string: { return rtrim (catos (_title)); }
    method set_title_str = (string val) void: { stoca (val, title, ' '); }
  }

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Recognize token COMPUTED.
	* libpoke/pkl-ast.h (PKL_AST_STRUCT_TYPE_FIELD_COMPUTED_P): Define.
	(struct pkl_ast_struct_type_field): New field computed_p.
	(struct pkl_ast_type): New field `ncfield' for struct types.
	(PKL_AST_TYPE_S_NCFIELD): Define.
	* libpoke/pkl-ast.c (pkl_ast_print_1): Print the computed_p
	attribute of struct type fields.
	(pkl_ast_sizeof_type): Do not count computed fields for the size
	of the struct.
	(pkl_ast_dup_type): Duplicate computed flag in struct type fields.
	(pkl_ast_type_mappable_p): Do not include computed fields in
	determining whether a struct type is mappable.
	(pkl_ast_type_is_complete): Do not include computed fields in
	determining whether a struct type is complete.
	(pkl_ast_typ

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1031,9 +1031,38 @@ EXTRA_DIST = \
   poke.pkl/close-2.pk \
   poke.pkl/close-diag-1.pk \
   poke.pkl/compiler-passes-1.pk \
+  poke.pkl/computed-diag-1.pk \
+  poke.pkl/computed-diag-2.pk \
+  poke.pkl/computed-diag-3.pk \
+  poke.pkl/computed-diag-4.pk \
+  poke.pkl/computed-diag-5.pk \
+  poke.pkl/computed-diag-6.pk \
+  poke.pkl/computed-diag-7.pk \
+  poke.pkl/computed-diag-8.pk \
+  poke.pkl/computed-diag-9.pk \
+  poke.pkl/computed-diag-10.pk \
+  poke.pkl/computed-diag-11.pk \
   poke.pkl/cond-exp-1.pk \
   poke.pkl/cond-exp-2.pk \
   poke.pkl/cond-exp-3.pk \
+  poke.pkl/computed-1.pk \
+  poke.pkl/computed-2.pk \
+  poke.pkl/computed-3.pk \
+  poke.pkl/computed-4.pk \
+  poke.pkl/computed-5.pk \
+  poke.pkl/computed-6.pk \
+  poke.pkl/computed-7.pk \
+  poke.pkl/computed-8.pk \
+  poke.pkl/computed-9.pk \
+  poke.pkl/computed-10.pk \
+  poke.pkl/computed-11.pk \
+  poke.pkl/computed-12.pk \
+  poke.pkl/computed-13.pk \
+  poke.pkl/computed-14.pk \
+  poke.pkl/computed-15.pk \
+  poke.pkl/computed-16.pk \
+  poke.pkl/computed-17.pk \
+  poke.pkl/computed-18.pk \
   poke.pkl/cond-exp-diag-1.pk \
   poke.pkl/cond-exp-diag-2.pk \
   poke.pkl/cond-exp-diag-3.pk \
@@ -2267,6 +2296,7 @@ EXTRA_DIST = \
   poke.pkl/typeof-23.pk \
   poke.pkl/typeof-24.pk \
   poke.pkl/typeof-25.pk \
+  poke.pkl/typeof-26.pk \
   poke.pkl/typeof-array-1.pk \
   poke.pkl/typeof-array-2.pk \
   poke.pkl/typeof-int-1.pk \
