--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -6,4 +6,4 @@ dist_pickles_DATA = elf-common.pk elf-64.pk elf-32.pk elf.pk ctf.pk ctf-dump.pk 
                     dwarf.pk dwarf-common.pk dwarf-frame.pk dwarf-pubnames.pk \
                     dwarf-types.pk time.pk argp.pk pktest.pk mbr.pk ustar.pk \
                     mcr.pk dwarf-expr.pk dwarf-info.pk id3v2.pk jffs2.pk asn1-ber.pk \
-                    openpgp.pk search.pk riscv.pk
+                    openpgp.pk search.pk riscv.pk coff.pk coff-i386.pk coff-aarch64.pk
