pickles: coff, pe: many improvements
2022-10-03  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/pe.pk: Load architecture-specific PE parts.
	* pickles/coff.pk (COFF_LINENO): New type.
	(COFF_Shdr): Use COFF_LINENO instead of COFF_LINENO_16.
	(COFF_Sym): e_scnum is signed.
	(COFF_N_ABS): Make negative.
	(COFF_N_DEBUG): Likewise.
	* pickles/coff-pe.pk: Remove file.
	* pickles/pe-i386.pk: New file.
	* pickles/pe-ia64.pk: Likewise.
	* pickles/pe-mips.pk: Likewise.
	* pickles/pe-amd64.pk: Likewise.
	* pickles/pe-arm.pk: Likewise.
	* pickles/pe-arm64.pk: Likewise.
	* pickles/pe-sh3.pk: Likewise.
	* pickles/pe-ppc.pk: Likewise.
	* pickles/pe-m32r.pk: Likewise.
	* pickles/Makefile.am (dist_pickles_DATA): Add new pickles.

--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -24,4 +24,5 @@ dist_pickles_DATA = elf-common.pk elf-64.pk elf-32.pk elf.pk ctf.pk ctf-dump.pk 
                     dwarf-types.pk time.pk argp.pk pktest.pk mbr.pk ustar.pk \
                     mcr.pk dwarf-expr.pk dwarf-info.pk id3v2.pk jffs2.pk asn1-ber.pk \
                     openpgp.pk search.pk riscv.pk coff.pk coff-i386.pk coff-aarch64.pk \
-                    pe.pk coff-pe.pk
+                    pe.pk pe-amd64.pk pe-arm.pk pe-arm64.pk pe-i386.pk pe-ia64.pk \
+                    pe-m32r.pk pe-mips.pk pe-ppc.pk pe-sh3.pk
