--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -25,4 +25,4 @@ dist_pickles_DATA = elf-common.pk elf-64.pk elf-32.pk elf.pk ctf.pk ctf-dump.pk 
                     mcr.pk dwarf-expr.pk dwarf-info.pk id3v2.pk jffs2.pk asn1-ber.pk \
                     openpgp.pk search.pk riscv.pk coff.pk coff-i386.pk coff-aarch64.pk \
                     pe.pk pe-amd64.pk pe-arm.pk pe-arm64.pk pe-i386.pk pe-ia64.pk \
-                    pe-m32r.pk pe-mips.pk pe-ppc.pk pe-sh3.pk
+                    pe-m32r.pk pe-mips.pk pe-ppc.pk pe-sh3.pk pe-riscv.pk pe-debug.pk
