Introduce support for pre-conditional optional fields
Up to now we used to support post-conditional optional fields,
i.e. fields which are optional depending on the value of a conditional
expression that is evaluated _after_ the field has been decoded.

For example:

  type ID3V2_Tag =
    struct
    {
       ID3V2_Hdr hdr;
       IDV2_Ext_Hdr ext_hdr if hdr.extended_hdr_present;
    };

When constructing or mapping a value of type ID3V2_Tag, the second
field is omitted from the resulting struct value if
hdr.extended_hdr_present is false.  However, the evaluation of the
expression happens once ext_hdr has been already decoded.  This may be
problematic in many (most?) cases, since it can lead to an EOF
condition or or a constraint error for data that is gonna be discarded
anyway.

This patch adds support for pre-conditional optional fields, which use
the following syntax:

  type ID3V2_Tag =
    struct
    {
       ID3V2_Hdr hdr;
       if (hdr.extended_hdr_present)
         IDV2_Ext_Hdr ext_hdr;
    };

In this case, if hdr.extended_hdr_present evaluates to false, the
field ext_hdr is omitted and no attempt to construct or map it
attempted at all.

An optional field can have both pre-conditional and post-conditional
expressions:

  type ID3V2_Tag =
    struct
    {
       ID3V2_Hdr hdr;
       if (hdr.extended_hdr_present)
         IDV2_Ext_Hdr ext_hdr if !ext_hdr.omit_me;
    };

2022-10-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: (struct_type_field_opcond_pre): New rule.
	(struct_type_field_optcond_post): Likewise.
	* libpoke/pkl-ast.h (PKL_AST_STRUCT_TYPE_FIELD_OPTCOND_PRE): New macro.
	(PKL_AST_STRUCT_TYPE_FIELD_OPTCOND_POST): Renamed from OPTCOND.
	(struct pkl_ast_struct_type_field): New field optcond_pre and
	optcond renamed to optcond_post.
	* libpoke/pkl-ast.c (pkl_ast_make_struct_type_field): Handle both
	optcond_pre and optcond_post.
	(pkl_ast_dup_type): Likewise.
	(pkl_ast_sizeof_type): Likewise.
	(pkl_ast_type_is_complete): Likewise.
	

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -159,7 +159,6 @@ EXTRA_DIST = \
   poke.map/func-map-3.pk \
   poke.map/func-map-4.pk \
   poke.map/func-map-5.pk \
-  poke.map/map-opcond-write-1.pk \
   poke.map/map-optcond-1.pk \
   poke.map/map-optcond-2.pk \
   poke.map/map-optcond-3.pk \
@@ -174,6 +173,22 @@ EXTRA_DIST = \
   poke.map/map-optcond-12.pk \
   poke.map/map-optcond-int-struct-1.pk \
   poke.map/map-optcond-int-struct-2.pk \
+  poke.map/map-optcond-pre-1.pk \
+  poke.map/map-optcond-pre-10.pk \
+  poke.map/map-optcond-pre-11.pk \
+  poke.map/map-optcond-pre-12.pk \
+  poke.map/map-optcond-pre-13.pk \
+  poke.map/map-optcond-pre-2.pk \
+  poke.map/map-optcond-pre-3.pk \
+  poke.map/map-optcond-pre-4.pk \
+  poke.map/map-optcond-pre-5.pk \
+  poke.map/map-optcond-pre-6.pk \
+  poke.map/map-optcond-pre-7.pk \
+  poke.map/map-optcond-pre-8.pk \
+  poke.map/map-optcond-pre-9.pk \
+  poke.map/map-optcond-pre-write-1.pk \
+  poke.map/map-optcond-pre-write-2.pk \
+  poke.map/map-optcond-write-1.pk \
   poke.map/map-size-1.pk \
   poke.map/map-size-2.pk \
   poke.map/map-size-3.pk \
@@ -1771,6 +1786,18 @@ EXTRA_DIST = \
   poke.pkl/optcond-7.pk \
   poke.pkl/optcond-8.pk \
   poke.pkl/optcond-9.pk \
+  poke.pkl/optcond-pre-1.pk \
+  poke.pkl/optcond-pre-10.pk \
+  poke.pkl/optcond-pre-11.pk \
+  poke.pkl/optcond-pre-12.pk \
+  poke.pkl/optcond-pre-2.pk \
+  poke.pkl/optcond-pre-3.pk \
+  poke.pkl/optcond-pre-4.pk \
+  poke.pkl/optcond-pre-5.pk \
+  poke.pkl/optcond-pre-6.pk \
+  poke.pkl/optcond-pre-7.pk \
+  poke.pkl/optcond-pre-8.pk \
+  poke.pkl/optcond-pre-9.pk \
   poke.pkl/optcond-10.pk \
   poke.pkl/optcond-11.pk \
   poke.pkl/optcond-12.pk \
@@ -1783,6 +1810,8 @@ EXTRA_DIST = \
   poke.pkl/optcond-19.pk \
   poke.pkl/optcond-20.pk \
   poke.pkl/optcond-21.pk \
+  poke.pkl/optcond-pre-diag-1.pk \
+  poke.pkl/optcond-pre-diag-2.pk \
   poke.pkl/or-1.pk \
   poke.pkl/or-2.pk \
   poke.pkl/or-3.pk \
