libpoke: fix struct formatters to handle absent fields
2022-10-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_formater): Support formatting absent
	fields in structs.
	* testsuite/poke.pkl/format-optcond-1.pk: New test.
	* testsuite/poke.pkl/format-optcond-2.pk: Likewise.
	* testsuite/poke.pkl/foramt-optcond-3.pk: Likewise.
	* testsuite/poke.pkl/format-optcond-4.pk: Likewise.
	* testsuite/poke.pkl/format-optcond-5.pk: Likewise.
	* testsuite/poke.pkl/format-optcond-6.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1321,6 +1321,12 @@ EXTRA_DIST = \
   poke.pkl/format-41.pk \
   poke.pkl/format-42.pk \
   poke.pkl/format-diag-1.pk \
+  poke.pkl/format-optcond-1.pk \
+  poke.pkl/format-optcond-2.pk \
+  poke.pkl/format-optcond-3.pk \
+  poke.pkl/format-optcond-4.pk \
+  poke.pkl/format-optcond-5.pk \
+  poke.pkl/format-optcond-6.pk \
   poke.pkl/formfeedchar.pk \
   poke.pkl/fun-no-return-1.pk \
   poke.pkl/fun-no-return-2.pk \
