Assembler statements and expressions in Poke
Poke now provides two ways to execute PVM assembler instructions: an
'asm' expression and an 'asm' statement.

"asm statements" take the following form:

     asm (TEMPLATE [: OUTPUTS [: INPUTS]])

where TEMPLATE is the written form of a PVM assembler program, OUTPUTS a
comma separated list of l-values ans INPUTS a comma separated list of
expressions.

   Before the assembler program in TEMPLATE is executed, the INPUTS (if
any) are pushed on the stack.  After the assembler program is executed,
it is expected to have left the same number of elements on the stack
than OUTPUTS specified.  These values are then assigned to the outputs,
in reverse order.

   Example:

     var result = 0;
     asm ("addi; nip2" : result : 10, 20);

After the execution of the 'asm' statement above, the value 30 is stored
in the variable 'result'.

"asm expressions" take the form:

     asm TYPE: (TEMPLATE [: INPUTS])

where TYPE is a simple type specifier and TEMPLATE and INPUTS have the
same meaning than in 'asm' statements.  A single output is always
expected to be generated on the stack, of type TYPE.

   Example:

     (poke) asm int: ("addi; nip2" : 10, 20) + 2
     32

   In both 'asm' statements and expressions the compiler generates code
that tries to determine whether the execution of the assembler code
results in the original stack being underflown or overflown.  If this is
found to happen an exception 'E_stack' is raised.

   'E_stack' is also raised in case an 'asm' statement or expression
leaves a non-representable PVM value as an output.  This is for example
the case of 'PVM_NULL', which can't be represented in Poke.

   Note however that the above mentioned tests are not perfect, and it
is generally possible to crash the system using 'asm' statements or
expressions.

2022-10-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: New token ASM.
	Rule for ASM statements and expressions.
	* libpoke/pkl-lex.l: Recognize token

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -737,6 +737,25 @@ EXTRA_DIST = \
   poke.pkl/arrays-index-diag-5.pk \
   poke.pkl/arrays-initializer-diag-1.pk \
   poke.pkl/arrays-initializer-diag-2.pk \
+  poke.pkl/asm-exp-1.pk \
+  poke.pkl/asm-exp-2.pk \
+  poke.pkl/asm-exp-3.pk \
+  poke.pkl/asm-exp-4.pk \
+  poke.pkl/asm-exp-5.pk \
+  poke.pkl/asm-exp-diag-1.pk \
+  poke.pkl/asm-exp-diag-2.pk \
+  poke.pkl/asm-exp-diag-3.pk \
+  poke.pkl/asm-exp-diag-4.pk \
+  poke.pkl/asm-stmt-1.pk \
+  poke.pkl/asm-stmt-2.pk \
+  poke.pkl/asm-stmt-3.pk \
+  poke.pkl/asm-stmt-4.pk \
+  poke.pkl/asm-stmt-5.pk \
+  poke.pkl/asm-stmt-6.pk \
+  poke.pkl/asm-stmt-diag-1.pk \
+  poke.pkl/asm-stmt-diag-2.pk \
+  poke.pkl/asm-stmt-diag-3.pk \
+  poke.pkl/asm-stmt-diag-4.pk \
   poke.pkl/array-integ-1.pk \
   poke.pkl/array-integ-2.pk \
   poke.pkl/array-integ-3.pk \
